--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
         <div class="card-img">
-          <a href="/ridemate">
-            <img src="images/miisikb.png" class="portfolio"/>
+          <a href="#">
+            <img src="images/miisik-detail.png" class="portfolio"/>
           </a>
         </div>
         <div class="card-content">
@@ -50,7 +50,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/miisik.html">
+        <a href="#">
           <img src="images/tastehome.png" class="portfolio"/>
         </a>
         <br/>
@@ -60,7 +60,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/expedia.html">
+        <a href="#">
           <img src="images/renospace.png" class="portfolio"/>
         </a>
         <br/>
@@ -70,7 +70,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/tastehome.html">
+        <a href="#">
           <img src="images/geckorea.png" class="portfolio"/>
         </a>
         <br/>
@@ -80,7 +80,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/pickeat.html">
+        <a href="#">
           <img src="images/idincu.png" class="portfolio"/>
         </a>
         <br/>
@@ -90,7 +90,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/cs61as-quiz-system.html">
+        <a href="#">
           <img src="images/prede.png" class="portfolio"/>
         </a>
         <br/>
