--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
         <div class="card-img">
-          <a href="/ridemate">
+          <a href="#">
             <img src="images/ridemate.png" class="portfolio"/>
           </a>
         </div>
@@ -50,7 +50,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/miisik.html">
+        <a href="#">
           <img src="images/pickeat-b.png" class="portfolio"/>
         </a>
         <br/>
@@ -60,7 +60,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/expedia.html">
+        <a href="#">
           <img src="images/outdoors.png" class="portfolio"/>
         </a>
         <br/>
@@ -70,7 +70,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/tastehome.html">
+        <a href="#">
           <img src="images/tieoff.png" class="portfolio"/>
         </a>
         <br/>
@@ -80,7 +80,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/pickeat.html">
+        <a href="#">
           <img src="images/webe.png" class="portfolio"/>
         </a>
         <br/>
@@ -90,7 +90,7 @@
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
-        <a href="/cs61as-quiz-system.html">
+        <a href="#">
           <img src="images/ku.png" class="portfolio"/>
         </a>
         <br/>
