--- a/about.html
+++ b/about.html
@@ -33,18 +33,20 @@
     </div>
 
     <div class="container">
+      <div class="about">
+      <img src="images/me.png" width="250px" class="me-img"/><br/><br/>
+      <h2> Hello my name is <span style="color: #337ab7">Gayoung Park</span></h2><br/>
+      <br/>
+      Entrepreneur who is passionate about solving problems and creating values to society <br/>
 
-      <div class="center">
-      <img src="images/me.png" width="250px"/><br/><br/>
-      Hello my name is Gayoung Park.<br/>
       <br/>
-      I studied Entrepreneurship at Babson College and I love building and experimenting new technologies.<br/>
-      <br/>
-      I am passionate about solving problems that can create a value to society.<br/>
-      <br/>
+      Constantly learning how to build better products, teams, and businesses. 
 
-      
+      <br/><br/>
+      Interested in problem solving, consumer tech, product management, business development <br/>
+      <br/>
     </div>
+      
   <br> <br> <br>
 
 
