--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
         <div class="card-img">
-          <a href="#">
+          <a href="ridemate.html">
             <img src="images/ridemate.png" class="portfolio"/>
           </a>
         </div>
@@ -91,11 +91,11 @@
     <div class="col-md-4 col-sm-6 col-xs-12 center">
       <div class="card">
         <a href="#">
-          <img src="images/ku.png" class="portfolio"/>
+          <img src="images/bemychef.png" class="portfolio"/>
         </a>
         <br/>
-        <h4> HeyKu </h4>
-        <h5 style="font-weight: normal">Ride matching application for college students</h5>
+        <h4> BeMyChef </h4>
+        <h5 style="font-weight: normal"> Marketplace for authentic home meals</h5>
       </div>
     </div>
   </div>
