--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
       <img src="images/me.png" width="250px" class="me-img"/><br/><br/>
       <h2> Hello my name is <span style="color: #337ab7">Gayoung Park</span></h2><br/>
       <br/>
-      Entrepreneur who is passionate about solving problems and creating values to society <br/>
+      I am an Entrepreneur and Adventurer who like to challenge myself and solve problems. I was previously Co-founder and CEO at Miisik (Fully Prepped Korean Meal Kit) and TasteHome (Marketplace for home meals). <br/> 
 
       <br/>
-      Constantly learning how to build better products, teams, and businesses. 
+      Always looking for learning opportunities where I can constantly learn to build better products, teams, and businesses that can create a huge value to society. 
 
       <br/><br/>
-      Interested in problem solving, consumer tech, product management, business development <br/>
+      Also, interested in startups, problem solving, consumer tech, product management, business development <br/>
       <br/>
     </div>
       
