--- a/about.html
+++ b/about.html
@@ -37,14 +37,16 @@
       <img src="images/me.png" width="250px" class="me-img"/><br/><br/>
       <h2> Hello my name is <span style="color: #337ab7">Gayoung Park</span></h2><br/>
       <br/>
-      I am an Entrepreneur and Adventurer who like to challenge myself and solve problems. I was previously Co-founder and CEO at Miisik (Fully Prepped Korean Meal Kit) and TasteHome (Marketplace for home meals). <br/> 
+      I am an Entrepreneur and Adventurer who likes to challenge myself and solve problems. I was previously Co-founder and CEO at Miisik (Fully Prepped Korean Meal Kit) and TasteHome (Marketplace for home meals). <br/> 
 
       <br/>
-      Always looking for learning opportunities where I can constantly learn to build better products, teams, and businesses that can create a huge value to society. 
+      I recently graduated from Babson College, having studied Entrepreneurship. My interests lie  in the fields of IT technology, startups, problem solving, consumer tech, research, product management, and business development. <br/><br/>
+
+
+      I am always looking for new learning opportunities wherein I can constantly learn to build better products, teams, and businesses that can create a huge value to society. 
 
       <br/><br/>
-      Also, interested in startups, problem solving, consumer tech, product management, business development <br/>
-      <br/>
+    
     </div>
       
   <br> <br> <br>
