--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </a>
         </div>
         <div class="card-content">
-          <h4>Miisik</h4>
+          <h4>Miisik, LLC</h4>
           <h5 style="font-weight: normal">Fully Prepped Korean Style Meal Kit </h5>
         </div>
       </div>
