--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
           <ul class="nav navbar-nav pull-left margin1">
-            <li class="active"><a href="index.html">Work </a></li>
-            <li ><a href="project.html">Project</a></li>
-            <li><a href="about.html"> About</a></li>
+            <li class="active inline-menu"><a href="index.html">Work </a></li>
+            <li class="inline-menu"><a href="project.html">Project</a></li>
+            <li class="inline-menu"><a href="about.html"> About</a></li>
           </ul>
           <ul class=" pull-right margin1">
         <a href="https://www.facebook.com/joannegayoung" class="sns-icons" target="_blank"><i class="fa fa-facebook"></i></a>
